--- a/public/sass/_responsive.scss
+++ b/public/sass/_responsive.scss
@@ -153,7 +153,7 @@
   
     .offcanvas-menu-wrapper {
       position: fixed;
-      left: -300px;
+      right: -300px;
       width: 300px;
       height: 100%;
       background: $white-color;
@@ -170,8 +170,8 @@
     }
   
     .offcanvas-menu-wrapper.active {
-      opacity: 1;
-      left: 0;
+      opacity: 0.5;
+      right: 0;
     }
   
     .offcanvas__menu {
@@ -234,7 +234,7 @@
       margin-right: 25px;
   
       a {
-        color: $heading-color;
+        color: black;
         font-size: 13px;
         text-transform: uppercase;
         letter-spacing: 2px;
