css filter done

--- a/src/pages/ShopDetails/css/style.css
+++ b/src/pages/ShopDetails/css/style.css
@@ -1153,10 +1153,6 @@ ol {
 	padding-right: 20px;
 }
 
-.shop__sidebar__search {
-	margin-bottom: 45px;
-}
-
 .shop__sidebar__search form {
 	position: relative;
 }
@@ -3448,6 +3444,9 @@ ol {
 /* Tablet Device = 768px */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
+	.filter-options .searchInputs{
+		display: none !important;
+	}
 	.header__menu ul li {
 		margin-right: 10px;
 	}
@@ -3551,6 +3550,9 @@ ol {
 /* Wide Mobile = 480px */
 
 @media only screen and (max-width: 767px) {
+	.filter-options .searchInputs{
+		display: none !important;
+	}
 	.canvas__open {
 		display: block;
 		font-size: 22px;
@@ -3918,6 +3920,9 @@ ol {
 /* Small Device = 320px */
 
 @media only screen and (max-width: 479px) {
+	.filter-options .searchInputs{
+		display: none !important;
+	}
 	.cart__total {
 		padding: 35px 30px 40px;
 	}
@@ -3983,32 +3988,59 @@ ol {
 		color: #111111;
 		background-color: #dcdcdc;
 	}
+
 }
   
-@media (max-width: 991px) {
-	.filter-button {
-	  top: 20px;
-	  right: 20px;
-	  z-index: 999;
-	  background-color: #ffffff;
-	  border: none;
-	  border-radius: 50%;
-	  width: 50px;
-	  height: 50px;
-	  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-	  cursor: pointer;
-	}
+ @media (max-width: 991px) {
+	 .shop__sidebar__accordion{
+		padding-right: 20px !important;
+		display: flex !important;
+		align-items: center !important;
+	  }
+
+	  .teya{
+		display: flex;
+	  }
+	  
+	  .filter-button {
+		margin-left: 20px;
+		flex: 0 !important;
+		top: 20px !important;
+		right: 20px !important;
+		z-index: 999 !important;
+		background-color: #ffffff !important;
+		border: none !important;
+		border-radius: 50% !important;
+		height: 50px !important;
+		box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1) !important;
+		cursor: pointer !important;
+		width: 20% !important;
+		margin-bottom: 10px !important;
+	  }
+	 
+	  .shop__sidebar__search {
+		flex: 7 !important;
+		padding:10px;
+		float: left !important;
+		margin-right: 5% !important;
+		margin-bottom: 0 !important;
+	  }
+	  
+	  .shop__sidebar__accordion > * + * {
+		margin-left: 10px !important;
+	  }
   
 	.filter-button.clicked {
-	  background-color: #f1f1f1; /* Apply a different background color when the button is clicked */
+	  background-color: #f1f1f1; 
 	}
   
 	.filter-button:focus {
-	  outline: none; /* Remove the focus outline when the button is clicked */
+	  outline: none; 
 	}
   
 	.filter-button:hover {
-	  background-color: #f1f1f1; /* Apply a different background color when the button is hovered */
+	  margin-left: 20px;
+	  background-color: #f1f1f1; 
 	}
   
 	.filter-button svg {
@@ -4016,37 +4048,20 @@ ol {
 	  height: 24px;
 	  color: #333333;
 	}
-
-	 .shop__sidebar {
-		padding-right: 20px; 
-	  }
-	  
-	  .shop__sidebar__accordion {
-		width: 15%;
-		float: left;
-		margin-bottom: 10px !important;
-		
-	  }
-	  
-	  .shop__sidebar__search {
-		width: 75%; /* Reduce the width to 60% */
-		float: left;
-		margin-right: 5%; /* Add a margin of 10% on the right side */
-		margin-bottom: 0;
-	  }
-	  
-	  .filter-options {
+	.filter-options {
+		margin-left: 20px;
 		position: absolute;
 		top: 100%;
 		left: 15px;
 		width: 80%;
 		background-color: #ffffff;
 		padding: 20px;
+		padding-top: 0px;
 		border: 1px solid #ccc;
 		border-radius: 4px;
 		box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 		z-index: 9999;
-	  }
+	  } 
 	  
-  }
+}
   
