--- a/public/css/style.css
+++ b/public/css/style.css
@@ -164,8 +164,8 @@ ol {
 	text-transform: uppercase;
 	padding: 14px 30px;
 	color: #ffffff;
-	background: #000000;
-	letter-spacing: 4px;
+	background: beige;
+	letter-spacing: 1px;
 }
 
 .site-btn {
@@ -1776,7 +1776,7 @@ ol {
 	display: inline-block;
 	font-size: 13px;
 	color: #3d3d3d;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-right: 20px;
@@ -2762,7 +2762,7 @@ ol {
 	color: #111111;
 	font-size: 13px;
 	font-weight: 700;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	text-transform: uppercase;
 	padding: 3px 0;
 	position: relative;
