--- a/src/pages/ShopDetails/css/style.css
+++ b/src/pages/ShopDetails/css/style.css
@@ -164,8 +164,8 @@ ol {
 	text-transform: uppercase;
 	padding: 14px 30px;
 	color: #ffffff;
-	background: #000000;
-	letter-spacing: 4px;
+	background: beige;
+	letter-spacing: 1px;
 }
 
 .site-btn {
@@ -721,7 +721,7 @@ ol {
 	color: #111111;
 	font-size: 13px;
 	font-weight: 700;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	text-transform: uppercase;
 	padding: 3px 0;
 	position: relative;
@@ -1778,7 +1778,7 @@ ol {
 	display: inline-block;
 	font-size: 13px;
 	color: #3d3d3d;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 700;
 	margin-right: 20px;
@@ -2379,7 +2379,7 @@ ol {
 
 .continue__btn.update__btn a {
 	color: #ffffff;
-	background: #111111;
+	background:beige;
 	border-color: #111111;
 }
 
@@ -2458,6 +2458,7 @@ ol {
 }
 
 .cart__total {
+	margin-top:30px;
 	background: #f3f2ee;
 	padding: 35px 40px 40px;
 }
@@ -2764,7 +2765,7 @@ ol {
 	color: #111111;
 	font-size: 13px;
 	font-weight: 700;
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	text-transform: uppercase;
 	padding: 3px 0;
 	position: relative;
@@ -3217,7 +3218,7 @@ ol {
 }
 
 .blog__details__comment form button {
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	padding: 14px 35px;
 }
 
@@ -3336,7 +3337,7 @@ ol {
 }
 
 .contact__form button {
-	letter-spacing: 4px;
+	letter-spacing: 2px;
 	padding: 14px 35px;
 }
 
