--- a/src/pages/ShopDetails/css/style.css
+++ b/src/pages/ShopDetails/css/style.css
@@ -2349,7 +2349,7 @@ body,html {
 
 .testimonial__text {
 	text-align: center;
-	padding: 130px 30px 175px;
+	padding: 200px 30px 300px;
 }
 
 .testimonial__text span {
@@ -3625,6 +3625,9 @@ body,html {
 	.header__menu.mobile-menu {
 		flex:6
 	}
+	.testimonial__text {
+		padding: 2px 20px 2px 4px;
+	}
 }
 
 /* Medium Device = 1200px */
@@ -3643,7 +3646,7 @@ body,html {
 		right: 2px;
 	}
 	.testimonial__text {
-		padding: 130px 45px 175px;
+		padding: 8px 4px 8px;
 	}
 	.filter__controls {
 		text-align: center;
@@ -3739,7 +3742,7 @@ body,html {
 		margin-top: 40px;
 	}
 	.testimonial__text {
-		padding: 100px 105px 100px;
+		padding: 8px 4px 8px;
 	}
 	.blog__details__share {
 		position: relative;
@@ -4087,9 +4090,6 @@ body,html {
 		padding-right: 0;
 		margin-bottom: 40px;
 	}
-	.testimonial__text {
-		padding: 100px 40px 100px;
-	}
 	.product__details__breadcrumb {
 		text-align: left;
 	}
@@ -4219,6 +4219,17 @@ body,html {
 		padding-bottom: 10px;
 		
 	}
+	.testimonial__text {
+		padding: 8px 4px 8px;
+	}
+	.testimonial__text p {
+		color: #111111;
+		font-size: 14px;
+		font-style: italic;
+		line-height: 30px;
+		padding-top: 1px;
+		margin-bottom: 25px;
+	}
 	
 }
 
@@ -4249,9 +4260,7 @@ body,html {
 	.instagram__pic__item {
 		width: 100%;
 	}
-	.testimonial__text {
-		padding: 60px 40px 60px;
-	}
+	
 	.product__details__pic .nav-tabs .nav-item .nav-link .product__thumb__pic {
 		width: 100%;
 	}
@@ -4320,6 +4329,17 @@ body,html {
 		font-size: 10px;
     	font-weight: 700;
     	width: 60px;
+	}
+	.testimonial__text {
+		padding:  4px 2px;
+	}
+	.testimonial__text p {
+		color: #111111;
+		font-size: 10px;
+		font-style: italic;
+		line-height: 30px;
+		padding-top: 1px;
+		margin-bottom: 25px;
 	}
 }
   
