--- a/src/pages/ShopDetails/css/style.css
+++ b/src/pages/ShopDetails/css/style.css
@@ -111,7 +111,7 @@ ol {
 -----------------------*/
 
 .section-title {
-	margin-bottom: 45px;
+	margin-bottom: 4px;
 	text-align: center;
 }
 
@@ -2194,7 +2194,7 @@ body,html {
 	color: #3d3d3d;
 	background: transparent;
 	border: none;
-	padding: 15px 0;
+	padding: 5px 0;
 	border-bottom: 2px solid #000000;
 }
 
@@ -3822,7 +3822,13 @@ body,html {
 	c2{
 		margin-right: 10px;
 	}
-
+	.logo-middle{
+		width: 250px;
+		height: 70px;
+	}
+	.counter{
+		display: none
+	}
 }
 
 /* Wide Mobile = 480px */
@@ -4230,7 +4236,20 @@ body,html {
 		padding-top: 1px;
 		margin-bottom: 25px;
 	}
-	
+	.logo-middle{
+		width: 200px;
+		height: 65px;
+	}
+	.counter{
+		display: none
+	}
+	.title{
+		font-size: 18px;
+        font-weight: bold;
+	}
+	.maps-text{
+		font-size:23px
+	}
 }
 
 /* Small Device = 320px */
@@ -4340,6 +4359,26 @@ body,html {
 		line-height: 30px;
 		padding-top: 1px;
 		margin-bottom: 25px;
+	}
+	.logo-middle{
+		width: 150px;
+		height: 45px;
+	}
+	.counter{
+		display: none
+	}
+	.site-text{
+		font-size:11px
+	}
+	.title{
+		font-size: 18px;
+        font-weight: bold;
+	}
+	.description{
+		font-size:10px 
+	}
+	.maps-text{
+		font-size:20px
 	}
 }
   
